# libremu8086

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
src/: libremu8086.cpp  libremu8086.h  main.cpp  types.h
src/disassembler/: decode.cpp  decode.hpp
tests/: decode.cpp  hello.cpp  hello_test.cpp
